src/assets/fonts.css
@font-face {
  font-family: 'Inter';
  font-style:  normal;
  font-weight: 500;
  font-display: swap;
  src: url("./fonts/Inter-Medium.woff2?v=3.15") format("woff2"),
       url("./fonts/Inter-Medium.woff?v=3.15") format("woff");
}
@font-face {
  font-family: 'Inter';
  font-style:  italic;
  font-weight: 500;
  font-display: swap;
  src: url("./fonts/Inter-MediumItalic.woff2?v=3.15") format("woff2"),
       url("./fonts/Inter-MediumItalic.woff?v=3.15") format("woff");
}

@font-face {
  font-family: 'Inter';
  font-style:  normal;
  font-weight: 600;
  font-display: swap;
  src: url("./fonts/Inter-SemiBold.woff2?v=3.15") format("woff2"),
       url("./fonts/Inter-SemiBold.woff?v=3.15") format("woff");
}
@font-face {
  font-family: 'Inter';
  font-style:  normal;
  font-weight: 700;
  font-display: swap;
  src: url("./fonts/Inter-Bold.woff2?v=3.15") format("woff2"),
       url("./fonts/Inter-Bold.woff?v=3.15") format("woff");
}

@supports (font-variation-settings: normal) {
  @font-face {
    font-family: 'Inter';
    font-weight: 400 900;
    font-display: swap;
    font-style: oblique 0deg 10deg;
    src: url("./fonts/Inter-var.woff2?v=3.15") format("woff2 supports variations"),
         url("./fonts/Inter-var.woff2?v=3.15") format("woff2-variations");
  }
}

